--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
 *, *::before, *::after {
     box-sizing: border-box;
 }
@@ -9,15 +7,13 @@
     padding: 0;
     list-style-type: none;
     text-decoration: none;
-
-    font-family: var(--mainFont);
 }
 
 :root {
     /* Colors */
     --primary: #171717;
     --secondary: #ededed;
-    --todoBackground: #b9b9b9;
+    --background: #b9b9b9;
 
     /* Measures */
     --mainMeasure: 1em;
@@ -26,41 +22,39 @@
     --rdMeasure: 0.5em;
     --thMeasure: 0.2em;
     --diffMeasure: 0.01em;
-    --fontSizeTitle: 1.3em;
-    --fontSizeParagraph: 1.1em;
-    --firstSizeWidthHeight: 7em;
-    --secondSizeWidthHeight: 8em;
-
-    /* Fonts */
-    --mainFont: "Roboto", serif;
 }
 
 body {
     padding: 1em;
     display: flex;
+    place-items: center;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
-.container-grid {
-    border: 3px solid firebrick;
-    row-gap: 10px;
-}
+/* @media (max-width: 768px) {
+    body {
+        justify-content: initial;
+        align-items: initial;
+        display: flex;
+        flex-direction: column;
+        border: 3px solid red;
+    }
+} */
 
 main .container-grid {
-    /* max-width: 70vw; */
     display: grid;
     grid-template-columns: [fc] 20em [sc] 20em [tc] 20em;
-    grid-template-rows: [fr] 20% [sr] 15em [tr] 25%;
+    grid-template-rows: [fr] 20% [sr] 25% [tr] 25%;
 }
 
 .grid-imgs {
+    padding: var(--thMeasure);
     width: 100%;
 }
 
 .grid-imgs:nth-child(5) {
-    border: 3px solid red;
     grid-column-start: sc;
     grid-column-end: tc;
     grid-row-start: 2;
@@ -68,7 +62,6 @@ main .container-grid {
 }
 
 .grid-imgs:nth-child(4) {
-    border: 3px solid green;
     grid-column-start: fc;
     grid-column-end: sc;
 
@@ -77,10 +70,22 @@ main .container-grid {
 }
 
 .grid-imgs:nth-child(6) {
-    border: 3px solid blue;
     grid-column-start: 3;
     grid-column-end: 4;
 
     grid-row-start: 3;
     grid-row-end: 4;
+}
+
+.grid-imgs:nth-child(2),
+.grid-imgs:nth-child(4), .grid-imgs:nth-child(6), .grid-imgs:nth-child(5){
+    /* margin-top: var(--secMainMeasure); */
+    height: 100%;
+    object-fit: cover;
+}
+
+.grid-imgs:nth-child(1), .grid-imgs:nth-child(3) {
+    margin-bottom: 6.8em;
+    height: min-content;
+    object-fit: cover;
 }
